migration dev done, testing remains